@@ -709,6 +709,18 @@
   return self;
 }
 
+- (BOOL) startTrackingAt: (NSPoint)startPoint inView: (NSView*)controlView
+{
+  return YES;
+}
+
+- (BOOL) continueTracking: (NSPoint)lastPoint
+                       at: (NSPoint)currentPoint
+                   inView: (NSView*)controlView
+{
+  return YES;
+}
+
 - (void) stopTracking: (NSPoint)lastPoint
 		   at: (NSPoint)stopPoint
 	       inView: (NSView*)controlView
